# AIengineeringbootcamp

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  project_canvas.md  pyproject.toml
evals/: eval_retriever.py
notebooks/: 01-llm-apis.ipynb  RAG-preprocessing.ipynb  data_query.ipynb  farmadati_preparation.ipynb  test.ipynb
src/chatbot-ui/: streamlit_app.py
src/chatbot-ui/core/: config.py
src/chatbot_ui/: retrieval.py  streamlit_app.py
src/chatbot_ui/core/: config.py
