[project]
name = "aiengineeringbootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai",
    "groq",
    "openai",
    "pandas",
    "pydantic",
    "pydantic-settings",
    "streamlit",
    "zeep",
    "qdrant_client",
    "langsmith",
    "langchain_openai",
    "ragas",
    "rapidfuzz"
]
